feat: enhance product management with validation and error handling for categories and images

--- a/backend/public/sell-item/index.html
+++ b/backend/public/sell-item/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="product-Category" id="same">
           <label for="">Product Category</label>
-          <select class="input-proudct" id="select-category">
+          <select class="input-proudct" id="select-category" required>
             <option value="" disabled selected>Select product category</option>
             <!-- <option value="Electronics">Electronics</option>
               <option value="Cars">Cars</option>
@@ -104,7 +104,7 @@
         </div>
         <div class="product-condition" id="same">
           <label for="">Product Condition</label>
-          <select class="input-proudct" id="select-condition">
+          <select class="input-proudct" id="select-condition" required>
             <option value="" disabled selected>Select product condition</option>
             <option value="New">New</option>
             <option value="Used-like New">Used-like New</option>
