feat: redesign account page layout and enhance delete account functionality

--- a/backend/public/my-account/index.html
+++ b/backend/public/my-account/index.html
@@ -62,112 +62,56 @@
       </div>
     </div>
   </nav>
-  
-   <div class="profile">
-    <i class="fa-solid fa-user"></i>
-    <div class="info">
-    <h2>John Doe</h2>
-    <p>Member since January 2025</p>
-  </div>
-   </div>
-   <div class="pages">
-    <button>Profile</button>
-    <button>My Products</button>
-   </div>
-   <hr>
-<div class="container">
-  <div class="edit-info">
-    <h2>Account Information</h2>
-    <button class="edit">Edit Info</button>
-  </div>
-  <div class="cont-delete-info">
-  <div class="account-info">
-      <div class="name">
-        <h5>Full Name</h5>
-        <strong>John Doe</strong>
+  <div class="container">
+    <div class="profile">
+      <i class="fa-solid fa-user"></i>
+      <div class="info">
+        <h2>John Doe</h2>
+        <p>Member since January 2025</p>
       </div>
-      <div class="email">
-        <h5>Email</h5>
-        <strong>john.doe@example.com</strong>
-  </div>
-      <div class="phone">
-        <h5>Phone</h5>
-        <strong>+1234567890</strong>
-      </div>
-      <div class="location">
-        <h5>location</h5>
-        <strong>+1234567890</strong>
-      </div>
+    </div>
+    <div class="pages">
+      <button>Profile</button>
+      <button>My Products</button>
     </div>
     <hr>
-    <div class="delete">
-      <h3>Danger Zone</h3>
-      <p>Deleting your account will permanently remove all your data, including your profile information and all product listings. This action cannot be undone.</p>
-      <button>🗑️ Delete Account</button>
+    <div class="account-info">
+      <div class="edit">
+      <h2>Account Information</h2>
+      <button>Edit Info</button>
+    </div>
+      <div class="info-item">
+        <div class="items">
+        <label for="fullname">Full Name</label>
+        <p>John Doe</p>
+      </div>
+      
+      <div class="items">
+        <label for="email">Email</label>
+        <p>john.doe@example.com</p>
+      </div>
+      <div class="items">
+        <label for="phone">Phone</label>
+        <p>+1 555-123-4567</p>
+      </div>
+      <div class="items">
+        <label for="location">Location</label>
+        <p>New York, NY</p>
+      </div>
     </div>
     </div>
-  <div class="main">
-  <form action="" class="form-information">
-<div class="information">
-  <div class="felds">
-  <label for="">Full Name</label>
-  <input type="text">
-</div>
-  <div class="felds">
-  <label for="">Email</label>
-  <input type="email">
-</div>
-  <div class="felds">
-  <label for="">Phone</label>
-  <input type="text">
-</div>
-  <div class="felds">
-  <label for="">location</label>
-  <input type="text">
-</div>
-</div>
-<button>Cancel</button>
-<button class="save">Save Changes</button>
-  </form>
+<div class="delete-zone">
   <hr>
-  <h2>Update Password</h2>
-  <form action="" >
-    <div class="Current-Password">
-    <label for="">Current Password</label>
-    <input type="password">
-    </div>
-    <div class="ubdate-password">
-<div class="password">
-<label for="">New Password</label>
-<input type="password">
-</div>
-<div class="password">
-<label for="">Confirm New Password</label>
-<input type="password">
-</div>
-</div>
-<button class="save">Ubdate Password</button>
-  </form>
-</div>
-</div>
-<div class="product">
-  <div class="add">
-  <h2>My Products</h2>
-  <button><a href="">+ Add New Product</a></button>
-</div>
-<div class="products">
-  <div class="one-product">
-    <img src="../images/product1.jpg" alt="Product 1" />
-    <p>Price: $100</p>
-    <div class="btns">
-    <button class="edit">Edit</button>
-    <button class="delete">Delete</button>
-  </div>
-  </div>
-</div>
+  <div class="delete-account">
+    <h2>Delete Account</h2>
+    <p>Deleting your account will permanently remove all your data, including your profile information and all product listings. This action cannot be undone.</p>
+    <button class="delete-button">🗑️ Delete Account</button>
 </div>
 
-<footer>
+  </div>
+  
+   
+<!-- <footer>
   <div class="contact">
     <div class="About">
       <h3>About Us</h2>
@@ -189,7 +133,7 @@
   <div class="copyright">
     <p>&copy; 2025 Used Market. All rights reserved.</p>
   </div>
-</footer>
+</footer> -->
 <script src="../js/toggle-theme.js"></script>
   <script src="../js/nav.js"></script>
   <script src="script.js"></script>
