feat: update navigation links to point to the my-account page across multiple files

--- a/backend/public/home/index.html
+++ b/backend/public/home/index.html
@@ -46,7 +46,7 @@
             </a>
           </li>
           <li id="nav-username" style="display: none;">
-            <a href="#">
+            <a href="../my-account">
             </a>
           </li>
           <li id="nav-logout" style="display: none;">
