--- a/backend/public/product/old.html
+++ b/backend/public/product/old.html
@@ -36,8 +36,9 @@
           <li id="nav-register">
             <a href="../register"> 📃Register </a>
           </li>
-          <li id="nav-username" style="display: none">
-            <a href="#"> </a>
+          <li id="nav-username" style="display: none;">
+            <a href="../my-account">
+            </a>
           </li>
           <li id="nav-logout" style="display: none">
             <a href="#"> 🚪Logout </a>
