--- a/backend/public/login/index.html
+++ b/backend/public/login/index.html
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li id="nav-username" style="display: none;">
-                        <a href="#">
+                        <a href="../my-account">
                         </a>
                     </li>
                     <li id="nav-logout" style="display: none;">
