--- a/backend/public/register/index.html
+++ b/backend/public/register/index.html
@@ -38,7 +38,7 @@
               <a href="../register"> 📃Register </a>
             </li>
             <li id="nav-username" style="display: none">
-              <a href="#"> </a>
+              <a href="../my-account"> </a>
             </li>
             <li id="nav-logout" style="display: none">
               <a href="#"> 🚪Logout </a>
