--- a/backend/public/sell-item/index.html
+++ b/backend/public/sell-item/index.html
@@ -37,7 +37,8 @@
             <a href="../register"> 📃Register </a>
           </li>
           <li id="nav-username" style="display: none">
-            <a href="#"> </a>
+            <a href="../my-account">
+            </a>
           </li>
           <li id="nav-logout" style="display: none">
             <a href="#"> 🚪Logout </a>
