feat: refine footer structure and adjust padding for improved layout consistency

--- a/backend/public/my-account/old.html
+++ b/backend/public/my-account/old.html
@@ -223,11 +223,12 @@
 
     </div>
   </div>
+  </div>
 
 
 
 
-  <!-- <footer>
+  <footer>
   <div class="contact">
     <div class="About">
       <h3>About Us</h2>
@@ -249,7 +250,7 @@
   <div class="copyright">
     <p>&copy; 2025 Used Market. All rights reserved.</p>
   </div>
-</footer> -->
+</footer>
   <script src="../js/toggle-theme.js"></script>
   <script src="../js/nav.js"></script>
   <script src="script.js"></script>
