feat: update branding from Pay&Pray to Call2Buy across multiple pages

--- a/backend/public/register/index.html
+++ b/backend/public/register/index.html
@@ -16,12 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>Pay&Pray/Register</title>
+    <title>Call2Buy/Register</title>
   </head>
   <body>
     <nav>
       <div class="nav-con">
-        <div class="logo"><a href="../home">Pay&Pray</a></div>
+        <div class="logo"><a href="../home">Call2Buy</a></div>
         <div class="right-side">
           <input type="checkbox" id="bars" class="nav-checkbox" />
           <ul>
