--- a/backend/public/login/index.html
+++ b/backend/public/login/index.html
@@ -14,13 +14,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>Pay&Pray/Login</title>
+    <title>Call2Buy/Login</title>
 </head>
 
 <body>
     <nav>
         <div class="nav-con">
-            <div class="logo"><a href="../home">Pay&Pray</a></div>
+            <div class="logo"><a href="../home">Call2Buy</a></div>
             <div class="right-side">
                 <input type="checkbox" id="bars" class="nav-checkbox">
                 <ul>
