feat: update footer structure and branding across multiple pages for consistency

--- a/backend/public/home/index.html
+++ b/backend/public/home/index.html
@@ -133,7 +133,7 @@
 
       <div class="footer-bottom">
         <p>&copy; 2025 Call2Buy. All rights reserved.</p>
-        <p>Designed with ❤️ by <a href="">Call2Buy Team</a></p>
+        <p>Developed with ❤️ by <a href="">Call2Buy Team</a></p>
       </div>
     </footer>
 
