--- a/backend/public/login/index.html
+++ b/backend/public/login/index.html
@@ -83,28 +83,50 @@
         </form>
     </div>
     <footer>
-    <div class="contact">
-        <div class="About">
-         <h3>About Us</h2>
-         <p>About used Market</p>
-         <p>How it Works</p>
+      <div class="footer-content">
+        <div class="fotter-links">
+          <a href="">About</a>
+          <a href="">Contact</a>
+          <a href="">Privacy</a>
+          <a href="">Terms</a>
         </div>
-        <div class="Support">
-         <h3>Support</h2>
-         <p>Contact Us</p>
-         <p>FAQ</p>
-        </div>
-        <div class="legal">
-         <h3>Legal</h2>
-         <p>Terms of Service</p>
-         <p>Privacy Policy</p>
+        <div class="footer-sochal">
+          <a href="">
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/733/733561.png"
+              alt="LinkedIn"
+              class="social-icon"
+            />
+          </a>
+          <a href="https://github.com/Abbas49/Web-Project" target="_blank">
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/733/733553.png"
+              alt="GitHub"
+              class="social-icon"
+            />
+          </a>
+          <a href="">
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
+              alt="Facebook"
+              class="social-icon"
+            />
+          </a>
+          <a href="">
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/733/733558.png"
+              alt="Instagram"
+              class="social-icon"
+            />
+          </a>
         </div>
       </div>
-        <hr>
-           <div class="copyright">
-            <p>&copy; 2025 Used Market. All rights reserved.</p>
-           </div>
-        </footer>
+
+      <div class="footer-bottom">
+        <p>&copy; 2025 Call2Buy. All rights reserved.</p>
+        <p>Developed with ❤️ by <a href="">Call2Buy Team</a></p>
+      </div>
+    </footer>
     
     <script src="../js/toggle-theme.js"></script>
     <script src="./script.js"></script>
